# airdrop-scripts

./: .editorconfig  .env.example  .flake8  .gitignore  README.md  airdrop.ipynb  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: ci.yml
configs/: config-202409.json
notebooks/: airdrop.ipynb
src/: main.py
src/dhkdao_airdrop/: __init__.py
src/scripts/: __init__.py  airdrop.py  main.py  utils.py
tests/fixtures/: config-1.json  config-invalid-1.json  config-valid.json
tests/scripts/: test_airdrop.py
